--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.now
+node_modules/
+*.env*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+.vercel
+package-lock.json
 
 # next.js
 /.next/
